@@ -1,3 +1,4 @@
+* implement Gaussian beam shape for XRR modelling
 * update documentation to recommend the use of pip for installation
 * remove multGaussFit/Plot and set multPeakFit/Plot deprecated
   -> use the much more powerful lmfit-package instead!
